deployment/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eudiplo-ingress
  annotations:
    # Add the annotations your ingress controller needs here.
spec:
  ingressClassName: nginx
  rules:
    - host: eudiplo.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eudiplo
                port:
                  number: 3000
    - host: eudiplo-client.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eudiplo-client
                port:
                  number: 80
